# learning-to-dispatch

./: .gitignore  README.md  all-requirements.txt  pyproject.toml
data/best_solutions/: line3_1.json
data/problems/: displib_testinstances_swapping1.json  displib_testinstances_swapping2.json  toy3_1.json  toy_busy_resource_ex.json  toy_ex_patient_p1.json  toy_ex_t1_w4.json
data/solutions/: line3_1.json  solution.json  toy_ex_patient_p1.json  toy_ex_t1_w4.json
paper/: main.tex  references.bib
results/: .txt  average_losses.txt  checkpoint_save.pth  model.pth
rl_dispatch/agent/: agent.py  gnn.py
rl_dispatch/data_handle/: data_handle.py  graph.py  verify.py
rl_dispatch/environment/: env_test.py  environment.py  features.py
rl_dispatch/rl/: model_train.py
